# NoPeekPanda

./: CREDITS.md  LICENSE_APACHE  LICENSE_MIT  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: connection.rs  mod.rs  operations.rs
src-tauri/src/utils/: settings.rs
src/routes/: +page.svelte  main.svelte  settings.svelte
src/utils/: theme.js
static/themes/: app.css
