[package]
name = "nopeekpanda"
version = "0.1.5"
description = "Password manager"
authors = ["CEBikol"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nopeekpanda_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.8.0", features = [] }
tauri-plugin-opener = "2.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6.0.0"
tokio = { version = "1.47.1", faetures = ["full", "time"] }
tauri-plugin-dialog = "2"
rand = "0.9.2"
zeroize = "1.8.1"
base64 = "0.22.1"
dirs = "6.0.0"
secrecy = "0.10.3"
anyhow = "1.0.99"
rusqlite = { version = "0.37.0", features = [
    "bundled",
    "bundled-sqlcipher-vendored-openssl",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
